shreyasmanifests/mongo/deny-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-mongo
  namespace: voting-app 
spec:
  podSelector:
    matchLabels:
      app: mongo 
  policyTypes:
    - Ingress
